src/app/component/eco-news/components/news-list/news-list.component.scss
.container {
  margin: 3px auto;
}

.wrapper {
  margin: 0 10%;
}

.cont {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.main-header {
  font-family: 'Montserrat', sans-serif;
  font-size: 3rem;
  line-height: 30px;
  font-weight: 500;
  margin: 0 0 40px 0;
}

.flex-container {
  padding-top: 8px;
  display: flex;
  justify-content: space-between;
}

.app-create-news {
  top: -10px;
}

.main-wrapper {
  margin: 12.5px 0;
  display: flex;
  justify-content: space-between;
}

.list {
  list-style: none;
  padding-left: 0;
}

.gallery-view-active {
  display: grid;
  grid-template-columns: repeat(3, 359px);
  grid-gap: 30px;
}

.list-view-li-active {
  margin-bottom: 40px;
}

li:focus {
  outline: none;
}

a {
  text-decoration: none;
}

#create-button {
  width: 185px;
  min-height: 40px;
  padding: 8px 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}

#create-button span {
  display: block;
}

.mat-spinner {
  margin: 0 auto;
  padding-top: 40px;

  ::ng-deep circle {
    stroke: #13aa57;
  }
}

@media screen and (max-width: 1199px) {
  .gallery-view-active {
    grid-template-columns: repeat(3, 299px);
    grid-gap: 15px;
  }
}

@media screen and (max-width: 991px) {
  .gallery-view-active {
    grid-template-columns: repeat(2, 353px);
    grid-gap: 15px;
  }

  .flex-container {
    width: 105%;
  }
}

@media screen and (max-width: 767px) {
  .wrapper {
    margin: 0 1.95%;
  }

  .gallery-view-active {
    grid-template-columns: repeat(2, 258px);
    grid-gap: 17px;
  }
}

@media screen and (max-width: 575px) {
  .wrapper {
    margin: 0 2.4%;
  }

  .gallery-view-active {
    grid-template-columns: repeat(1, 288px);
    grid-gap: 25px;
  }
}

